--- a/assets/style.css
+++ b/assets/style.css
@@ -11,3 +11,34 @@ h4 {
     background: linear-gradient(45deg, #07fff362, transparent);
 }
 
+.wrapper {
+  height: 100vh;
+  overflow-y: auto;
+  overflow-x: hidden;
+  perspective: 10px;
+}
+heade{
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  transform-style: preserve-3d;
+  z-index: -1;
+}
+.background{ 
+  transform: translate(-10px) scale(2);
+}
+.foreground{
+  transform: translate(-5px) scale(1.5);
+
+}
+
+.background,
+.foreground{
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  z-index: -1;
+}
