clean up the look of webpage have text next to images

--- a/assets/style.css
+++ b/assets/style.css
@@ -11,6 +11,22 @@ h4 {
     background: linear-gradient(45deg, #07fff362, transparent);
 }
 
+#dogPic {
+  float: right;
+  max-height: 300px;
+}
+
+#image {
+  float: left;
+  width: 300px;
+  max-height: 200px;
+}
+
+#dogfact {
+  float: right;
+  max-width: 400px;
+}
+
 #dogId {
   visibility: hidden;
 }
@@ -34,4 +50,8 @@ h4 {
 #clickHistory:hover{
   background-color:rgb(0, 211, 211);
   transition: 0.3s;
+}
+
+.dog-info {
+  float: left;
 }
